                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 29-01-2006 changed: only smb:// urls are checked for workgroup/domain. allows semicolon to be used as username and password in other protocols.
 - 29-01-2006 fixed: SF.net bug report [ 1411396 ] NSF audio pitched up. 
 - 28-01-2006 added: cube codec to paplayer. plays gamecube/ps2/xbox music (from games). based on in_cube.
 - 28-01-2006 added: option to auto resume from last position in video settings.
 - 27-01-2006 fixed: samba client could select wrong ip when connecting to multihomed server. 
                     subnet mask of xbox is now assumed to be 255.255.255.0 since it doesn't seem like it's possible to get from the xdk.                     
 - 27-01-2006 fixed: dvdplayer wouldn't stop playback at eof, just spit out error messages
 - 27-01-2006 fixed: dvdplayer will now decode AAC audio in mpg containers correctly (extradata wasn't passed on)
 - 26-01-2006 fixed: some small stuff (message when reset settings on boot, a couple of defines in util.h).
 - 25-01-2006 fixed: IMDB thumbs (imdb.com changed their webpage slightly)
 - 25-01-2006 fixed: My Video "Query Info For All Files" for paths on a disc
 - 25-01-2006 fixed: typo in cachesubtitles. really fixes caching subs 'hangs'.
 - 25-01-2006 added: gui indication when trainers are disabled due to kai.
 - 25-01-2006 fixed: better handling of broken trainers.
 - 25-01-2006 changed: trainer enigine update to v2.2. thanks to team xored!
 - 25-01-2006 fixed: xbtf support. thanks to team xored!
 - 25-01-2006 changed: Multiple <visible> tags in the same control are ANDed together.